Fix overlapping community name and logo

--- a/src/main.scss
+++ b/src/main.scss
@@ -17,28 +17,38 @@ body {
     .nav-wrapper {
       .row {
         height: 100%;
-      }
-    }
 
-    .brand-logo {
-      display: flex;
-      height: 100%;
-      align-items: center;
-      gap: 8px;
+        .col {
+          height: 100%;
 
-      img, a {
-        max-height: 100%;
-        height: 100%;
-      }
-    }
+          display: flex;
+          align-items: center;
+          gap: 8px;
 
-    ul.left {
-      margin-left: 64px;
-    }
+          .brand-logo {
+            position: relative;
+            height: 100%;
 
-    .container .links {
-      img {
-        height: 48px;
+            img, a {
+              max-height: 100%;
+              height: 100%;
+            }
+          }
+
+          .logout {
+            margin-left: auto;
+          }
+
+          ul.left {
+            margin-left: 64px;
+          }
+
+          .container .links {
+            img {
+              height: 48px;
+            }
+          }
+        }
       }
     }
   }
